--- a/inance/index.html
+++ b/inance/index.html
@@ -77,6 +77,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
+                 <li class="nav-item">
+                  <a class="nav-link" href="https://www.youtube.com/@shanumrahaf">Youtube</a>
+                </li>
               </ul>
             </div>
           </nav>
